recursion.logo.polygonfractal.PolygonFractal.scala.error
Erreur de compilation :
PolygonFractal:11: error: illegal character '\u00b2'
      polygonFractal(levels-1,sides,length*(shrink?),shrink)
                                                  ^PolygonFractal:11: error: ')' expected but something found.
      polygonFractal(levels-1,sides,length*(shrink?),shrink)
                                                  ^PolygonFractal:15: error: ')' expected but '}' found.
    }
    ^